--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <h2>My Recipes</h2>
+    <p>
+        <a href="./recipes/lo-mein.html">Lo Mein</a>
+
+    </p>
     
 </body>
 </html>
