Create "Description", "Ingredients" and "Steps" headings
The above-mentioned headings have been created. I also wrote the "Description" paragraph and added an image of the dish under the name of the recipe.

--- a/recipes/lo-mein.html
+++ b/recipes/lo-mein.html
@@ -6,6 +6,22 @@
 </head>
 <body>
     <h1>Lo Mein</h1>
+    <p>
+        <img src="../images/lo-mein.jpg" alt="a close-up of a bowl of noodles with mushrooms and spring onions on top">
+    </p>
+
+    <h2>Description</h2>
+    <p>Hi everyone!</p>
+
+    <p>This is the perfect recipe for when you're craving for something tasty but don't want to spend too much time cooking!</p>
+
+    <p>I am going to guide you through the making of this simple yet tasty Asian recipe, consisting of noodles, mushrooms, some veggies and a delicious mix of soy sauce, hoisin sauce and maple syrup. Mlml!</p>
+
+    <h2>Ingredients</h2>
+
+    <h2>Steps</h2>
+
+
     
 </body>
 </html>
