--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <h2>My Recipes</h2>
-    <p>
-        <a href="./recipes/lo-mein.html">Lo Mein</a>
-
-    </p>
-    
-</body>
-</html>
+    <ul>
+        <li><a href="./recipes/lo-mein.html">Lo Mein</a></li>
+        <li><a href="./recipes/kale-chips.html">Kale Chips</a>
+        <li><a href="./recipes/pappardelle-ragu-lenticchie.html">Pappardelle with Lentil Ragu</a>
+    </ul>
