--- a/recipes/pappardelle-ragu-lenticchie.html
+++ b/recipes/pappardelle-ragu-lenticchie.html
@@ -15,40 +15,31 @@
 
       <p>Hi everyone!</p>
 
-      <p>This is the perfect recipe for when you're craving for something tasty but don't want to spend too much time cooking!</p>
+      <p>When I stopped eating meat, I knew ragu was one of the things I would miss the most. But thanks to this recipe, all the smell and the taste typical of ragu are guaranteed to be back!</p>
 
-      <p>I am going to guide you through the making of this simple yet tasty Asian recipe, consisting of noodles, mushrooms, some veggies and a delicious mix of soy sauce, hoisin sauce and maple syrup. Mlml!</p>
+      <p>In this recipe I am going to show you how to make Pappardelle (egg pasta) with a lentil-based ragu. It will have the same spices (rosemary, salt and pepper) and veggies (onion, celery and carrots) typical of the traditional ragu. You will hardly be able to tell the difference!</p>
 
     <h2>Ingredients</h2>
       
       <ul>
-        <li>Noodles x 175 gr</li>  
-        <li>Mushrooms x 400 gr</li>
-        <li>Cloves of garlic x 3</li>
-        <li>Carrot x 1</li>
-        <li>Cabbage x 1/4</li>
+        <li>Soffritto mix x 1 Tbsp</li>  
+        <li>Lentils x 200 gr (already cooked)</li>
+        <li>Pappardelle (or your favourite pasta) x 200 gr</li>
+        <li>Tomato passata x 250 ml</li>
+        <li>Rosemary</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+        <li>EVO oil</li>
       </ul>
-
-    <h4>For the sauce:</h4>
-      <ul>
-          <li>Dark soy sauce x 4 Tbsp</li>
-          <li>Hoisin sauce x 2 Tbsp</li>
-          <li>Maple syrup x 1 Tbsp</li>
-      </ul>
-    
-      <h4>For the topping (optional):</h4>
-        <li>Spring onion x 1</li>  
-        <li>Sesame seeds</li>
 
     <h2>Steps</h2>
       <ol>
-          <li>Fry the mushrooms in oil until browned, adding a splash of soy sauce.</li>
-          <li>Chop the garlic, the carrot and the cabbage and add to the pan. Fry until softened.</li>
-          <li>Chop the spring onion (optional).</li>
-          <li>In a bowl, mix the soy sauce, the hoisin sauce and the maple syrup. Add to the pan.</li>
-          <li>Add the noodles to the pan and stir fry for a few minutes.</li>
-          <li>Sprinkle the spring onion and the sesame seeds (optional).</li>
-          <li>Enjoy!</li>
+          <li>Heat a Tbsp of oil in a pan, and add the soffritto mix. Stil until softened</li>
+          <li>Add the pre-cooked lentils and mix well, then add rosemary (to taste) and stir for a couple of minutes.</li>
+          <li>Add the tomato passata, salt and cook for 5-10 minutes, stirring occasionally.</li>
+          <li>Meanwhile, put some water to boil in a pot, with 1/2 Tbsp of salt. Once boiling, put the pasta in the pot and let cook for the time indicated in the package.</li>
+          <li>When the pasta is ready, drain it and then add it to the pan where the ragu is cooking. Add some pepper and stir well.</li>
+          <li>Serve, and enjoy!</li>
         </ol>
    
 </body>
